# labelpull

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/labelpull/: __init__.py  adapters.py  cli.py  core.py
tests/: test_adapters.py  test_cli.py  test_core.py
tests/fixtures/: boxes_masks_export.ndjson  species_export.ndjson
